--- a/AUTHORS
+++ b/AUTHORS
@@ -6,11 +6,12 @@
  * Mark Rowe <trac@bdash.net.nz> 
  * Matthew Good <trac@matt-good.net>
  * Christian Boos <cboos@neuf.fr>
- * Emmanual Blot <emmanuel.blot@free.fr>
+ * Emmanuel Blot <emmanuel.blot@free.fr>
  * Alec Thomas <alec@swapoff.org>
  * Tim Hatch <trac@timhatch.com>
  * Eli Carter <retracile@gmail.com>
  * Noah Kantrowitz <kantrn+trac@rpi.edu>
  * Jeroen Ruigrok van der Werven <asmodai@in-nomine.org>
+ * Odd Simon Simonsen <simon-code@bvnetwork.no>
 
 See also THANKS for people who have contributed to the project.
