--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@
  * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
+ * Paul Irish                     paul.irishEWWSPAM@gmail.com
  * Noah Kantrowitz (coderanger)   coderanger@yahoo.com
  * Waldemar Kornewald             wkornew@gmx.net
  * Nuutti Kotivuori               naked@iki.fi
